# ik-wil-een-auto

./: .gitignore  README.md  pyproject.toml  show_results.py  test_tco_model.py
car_scraper/: __init__.py  analysis.py  models.py  personal_analysis.py  scrape.py  utils.py
notebooks/: car_analysis.ipynb
reports/: best_deals.csv  personal_best_deals.csv  peugeot.2008.personal_best_deals.csv  peugeot.208.best_deals.csv  peugeot.208.personal_best_deals.csv  renault.captur.personal_best_deals.csv  renault.clio.personal_best_deals.csv  skoda.kamiq.personal_best_deals.csv
tests/: test_scraper.py
